tusd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tusd-deployment
  labels:
    app: tusd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tusd
  template:
    metadata:
      labels:
        app: tusd
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: tusd
        image: tusproject/tusd:latest
        args:
        - "-behind-proxy"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tusd-data
          mountPath: /srv/tusd-data/data
      volumes:
      - name: tusd-data
        persistentVolumeClaim:
          claimName: tusd-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tusd
  annotations:
    cloud.google.com/backend-config: '{"default": "tusd"}'
spec:
  selector:
    app: tusd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
