networking.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tusd
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: tusd
    networking.gke.io/v1beta1.FrontendConfig: tusd
    networking.gke.io/managed-certificates: tusd
spec:
  defaultBackend:
    service:
      name: tusd
      port:
        number: 8080
